# hud

./: README.md
docs/: TROUBLESHOOTING.md
hud/: Cargo.toml
hud-ebpf/src/: main.rs
hud/src/: tui.rs
hud/src/profiling/: event_processor.rs
