[package]
name = "hud"
version = "0.5.2"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
hud-common = { path = "../hud-common", features = ["user"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
# Symbol resolution for stack traces
addr2line = "0.24"
object = { version = "0.36", default-features = false, features = ["read_core", "elf"] }
rustc-demangle = "0.1"
gimli = "0.31"
# Chrome trace export
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Structured error handling
thiserror = "2.0"
# System info for pre-flight checks
libc = "0.2"
# TUI for intuitive visualization
ratatui = "0.29"
crossterm = "0.28"
crossbeam-channel = "0.5"
# Clipboard for yank feature
arboard = "3.4"

[dev-dependencies]
tempfile = "3.8"
axum = "0.7"
bcrypt = "0.15"
flate2 = "1.0"
